--- a/index.html
+++ b/index.html
@@ -4,6 +4,83 @@
 	<meta charset="utf-8">
 	<title>Mon curriculum vitae </title>
 	<link rel="stylesheet" type="text/css" href="curriculum.css">
+	<style>
+		/*Mise en forme de la page du curriculum vitae*/
+img{/*Image de Rab*/
+    width: 25%;
+    height: 400px;
+    border: 5px double black;
+    border-radius: 50%;
+}
+span{/*Element de etat civil*/
+    font-weight: bold;
+}
+*{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+.etat_civil,table{
+    margin-left: 10%;
+}
+body{
+    background-color: aliceblue;
+    width: 95%;
+    margin:auto;
+}
+table, td{
+    border: 1px solid black;
+    border-collapse: collapse;
+    width: 50%;
+    text-align: center;
+}
+.numerotation{
+    background-color: whitesmoke;
+}
+.designation{
+    background-color:  gold;
+}
+header h1,header{
+    text-align: center;
+    background-color: antiquewhite;
+    margin-top: 0%;
+    padding: 10px;
+}
+section{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+h2{
+    color: red;
+}
+footer,a{
+    display: flex;
+    justify-content: space-around;
+    text-decoration: none;
+}
+footer p{
+    font-style: italic;
+}
+.button a{
+    height: 50px;
+}
+.bouton{
+    display: flex;
+    justify-content: space-between;
+}
+a:hover{
+    text-decoration: underline;
+    height: 40px;
+}
+aside{
+    border:1px solid grey;
+    box-shadow: 12px 12px 12px grey;
+    padding-left: 4%;
+    padding-right:4%;
+    border-radius: 5%;
+}
+
+	</style>
 </head>
 <body>
 		<header>
