--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ img{/*Image de Rab*/
     height: 400px;
     border: 5px double black;
     border-radius: 50%;
+	box-shadow: 15px 15px 15px black;
 }
 span{/*Element de etat civil*/
     font-weight: bold;
