--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ img{/*Image de Rab*/
     border: 5px double black;
     border-radius: 25%;
 	box-shadow: 15px 15px 15px black;
+	box-shadow: 15px 15px 15px 20px black;
 }
 span{/*Element de etat civil*/
     font-weight: bold;
