--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ img{/*Image de Rab*/
     height: 400px;
     border: 5px double black;
     border-radius: 25%;
-	box-shadow: 15px 15px 15px 10px black;
+	box-shadow: 10px 10px 10px black;
 }
 span{/*Element de etat civil*/
     font-weight: bold;
